<resources>
    <string name="app_name">Transportes Ejecutivos</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="loginImage">Transportes Ejecutivos</string>
    <string name="prompt_username">Nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_login_button">Iniciar Sesión</string>
    <string name="prompt_login_button_short">Iniciar Sesión</string>
    <string name="error_empty_username">No has enviado tu nombre de usuario</string>
    <string name="error_empty_password">No has enviado tu contraseña</string>
    <string name="error_invalid_login">Usuario o contraseña incorrecta</string>

    <!-- General Strings -->
    <string name="error_general">Se ha presentado un error, por favor intenta más tarde</string>
    <string name="no_services">No hay servicios para mostrar</string>
    <string name="accept_button">Aceptar</string>

    <!-- Main Menu -->
    <string name="action_logout">Cerrar Sesión</string>
    <string name="action_profile">Mi Perfil</string>

    <!-- Activity Main-->
    <string name="title_activity_main">Transportes Ejecutivos</string>

    <!-- Recover Password-->
    <string name="prompt_recoverpass_button">Recuperar Contraseña</string>
    <string name="recoverpass_success">Se ha enviado mail a tu correo eléctronico con instrucciones para recuperar tu contraseña</string>
    <string name="recoverpass_failured">No hay un usuario registrado con el nombre de usuario digitado</string>

    <!-- Services List -->
    <string name="url_fly">https://www.google.com.co/webhp?sourceid=chromeinstant&amp;ion=1&amp;espv=2&amp;ie=UTF-8#q=</string>
    <string name="action_new_service">Nuevo Servicio</string>

    <!-- Tabs -->
    <string name="main_tab">Servicios</string>
    <string name="filter_tab">Buscar Servicio</string>

    <!-- Profile Activity -->
    <string name="title_activity_profile">Mi Perfil</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_lastname">Apellido</string>
    <string name="prompt_profile_button">Editar Perfil</string>
    <string name="prompt_email1">Correo Eléctronico</string>
    <string name="prompt_email2">Correo Eléctronico Alternativo</string>
    <string name="prompt_phone1">Télefono</string>
    <string name="prompt_phone2">Télefono Alternativo</string>
    <string name="error_empty_name">No has enviado tu nombre</string>
    <string name="error_empty_lastname">No has enviado tu apellido</string>
    <string name="error_empty_email1">No has enviado tu correo eléctronico</string>
    <string name="error_empty_phone1">No has enviado tu número de télefono</string>
    <string name="error_invalid_email">El correo eléctronico enviado es inválido</string>
    <string name="error_invalid_profile_update">Ha ocurrido un error, por favor intenta más tarde</string>
    <string name="snackbar_action_back">Regresar</string>
    <string name="profile_update_success">Se ha actualizado tu perfil exitosamente</string>

    <!-- Dashboard Activity -->
    <string name="title_activity_dashboard">Transportes Ejecutivos</string>
    <string name="not_driver">Servicio sin conductor</string>
    <string name="action_dashboard">Inicio</string>
    <string name="prompt_search_service">Buscar Servicio</string>

    <!-- Driver Location-->
    <string name="title_activity_driverlocation">Ubicación del Conductor</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyBYVnIyRFZKK_nH_GZj4AFC9uNsjuBAH_4
    </string>
    <string name="x">AIzaSyDtAR9fShr07BPB9qOp_9hAClgwrxUcooA</string>
    <string name="prompt_driver_location">Ver Ubicación del Conductor</string>
    <string name="title_driver_location">Ubicación del conductor</string>
    <string name="title_user_location">Tu Ubicación</string>
    <string name="title_activity_resetpass">Cambiar Contraseña</string>
    <string name="prompt_password2">Repita la nueva contraseña</string>
    <string name="prompt_password1">Nueva Contraseña</string>
    <string name="reset_password_description">Por ser un nuevo usuario, le invitamos a cambiar la contraseña con el siguiente formulario</string>
    <string name="error_empty_password1">La nueva contraseña no puede ser vacía</string>
    <string name="error_empty_password2">Debes repetir la contraseña</string>
    <string name="error_not_equals_passwords">Las contraseñas no coinciden</string>
    <string name="error_reset_password">No se pudo cambiar la contraseña, por favor intenta más tarde</string>
    <string name="success_reset_password">Se ha cambiado la contraseña exitosamente, por favor inicie sesión</string>
    <string name="prompt_reset_password_button">Cambiar Contraseña</string>
    <string name="prompt_notifications">Deseo recibir notificaciones por correo</string>
    <string name="title_activity_recoverpass">Recuperar Contraseña</string>
    <string name="prompt_see_driver_data">Detalle de Conductor</string>
    <string name="prompt_see_service_details">Detalle de servicio</string>
    <string name="prompt_back_to_general">Regresar</string>
    <string name="prompt_version">Versión 1.1.3</string>
    <string name="prompt_call_driver">Llamar conductor</string>
    <string name="prompt_share_location">Compartir mi ubicación</string>

    <!-- Share Location-->
    <string name="share_location_subject">Estoy viajando con Transportes Ejecutivos</string>
    <string name="share_location_content">Estoy viajando con Transportes Ejecutivos, para ver mi ubicación visita: http://www.transportesejecutivos.com/getlocation.php?id=</string>
    <string name="share_location_title">Compartir en</string>

    <string name="cancel_permission_location">Esta aplicación necesita permiso para realizar llamadas telefónicas, al no aceptar la solicitud, no podrá usar esta funcionalidad.</string>
    <string name="title_activity_requestservice">Solicitar servicio</string>

    <!-- Request service -->
    <string name="prompt_car_type">Selecciona tipo de vehículo</string>
    <string name="prompt_passengers">Cantidad de pasajeros</string>
    <string name="prompt_set_start_date">Fecha del servicio</string>
    <string name="prompt_set_start_time">Hora del servicio</string>
    <string name="prompt_source_city">Ciudad de inicio</string>
    <string name="prompt_source_address">Dirección de recogida</string>
    <string name="prompt_fly">Número de vuelo</string>
    <string name="prompt_aeroline">Aerolínea</string>
    <string name="prompt_destiny_address">Dirección de destino</string>
    <string name="prompt_destiny_city">Ciudad de destino</string>
    <string name="prompt_observations">Observaciones (opcional</string>
    <string name="prompt_request_service">Solicitar</string>
    <string name="prompt_request_service_instructions">Desde aquí podrás solicitar un servicio de transporte. Por favor busca la dirección de recogida y de destino. El vuelo y las observaciones son opcionales.</string>
    <string name="error_empty_passengers">Debes ingresar la cantidad de pasajeros</string>
    <string name="error_empty_start_address">Debes ingresar la dirección de recogida</string>
    <string name="error_empty_start_date">Debes ingresar la fecha del servicio</string>
    <string name="error_empty_start_time">Debes ingresar la hora del servicio</string>
    <string name="server_error">Ha ocurrido un error, por favor contacta al administrador</string>
    <string name="request_service_successfully">Se ha solicitado el servicio exitosamente</string>
</resources>
