<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".ResetpassActivity"
    tools:showIn="@layout/activity_requestservice">

    <ProgressBar
        android:id="@+id/request_service_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/request_service_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/request_service_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Source address -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_source_address" />

                <fragment
                    android:id="@+id/place_autocomplete_fragment_source_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <!-- Destiny address -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_destiny_address" />

                <fragment
                    android:id="@+id/place_autocomplete_fragment_destiny_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <!-- Car Type -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_car_type" />

                <Spinner
                    android:id="@+id/car_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_car_type"/>

            </LinearLayout>

            <!-- Passengers -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/number_layout_passengers"
                app:errorTextAppearance="@style/ErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/passengers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/prompt_passengers"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <!-- Start date -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/date_layout_date"
                app:errorTextAppearance="@style/ErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="date"
                    android:hint="@string/prompt_set_start_date" />

            </android.support.design.widget.TextInputLayout>

            <!-- Start time -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/date_layout_time"
                app:errorTextAppearance="@style/ErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="date"
                    android:hint="@string/prompt_set_start_time" />

            </android.support.design.widget.TextInputLayout>

            <!-- Aeroline -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_aeroline" />

                <Spinner
                    android:id="@+id/aeroline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_aeroline"/>

            </LinearLayout>

            <!-- Fly -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_layout_fly"
                app:errorTextAppearance="@style/ErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/fly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/prompt_fly" />

            </android.support.design.widget.TextInputLayout>

            <!-- Observations -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_layout_observations"
                app:errorTextAppearance="@style/ErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/observations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/prompt_observations" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/request_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="15dp"
                android:elevation="10dp"
                android:text="@string/prompt_request_service"
                android:background="@color/green"
                android:textColor="@color/colorPrimaryTextLight" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>